--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+  
     <title>Animal Buttons</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -9,19 +9,33 @@
 </head>
 
 <body>
-
-<div id="buttons">
+<div class="container">
+<div id="animalsbuttons">
   
 
-<button class="animals" data-animal="shark">chomp</button>
-<button class="animals" data-animal="turtle">crawl</button>
-<button class="animals" data-animal="eagle">squaa</button>
-
+<button class="btn btn-info animal" data-name="Shark" style="margin: 5px;">Shark</button>
+<button class="btn btn-info animal" data-name="Turtle" style="margin: 5px;">Turtle</button>
+<button class="btn btn-info animal" data-name="Eagle" style="margin: 5px;">Eagle</button>
 </div>
-<div id="gifs-appear-here ">
+</div>
+<<div id="gifs" style="float:left"></div>
 </div>
 
-
+<div style="float:right; margin-top:90px;">
+    <h4>Add an Animal</h4>
+       <form id="gif-form">
+           <label for="gif-input"></label>
+           <input type="text" value="" id="gif-input"><br><br>
+           <!--Creates the submit button-->
+           <input type="submit" name="Button" class="btn btn-success" id="theButton" style="margin-left:8px">
+       </form>
+   </div>
+   
+   <script src='https://code.jquery.com/jquery-2.1.3.min.js'></script>
+   
+     <!-- Local javascript operations file -->
+     <script type="text/javascript" src="assets/javascript/app.js"></script>
+   
 
 
 
