this is my finalization of the project. I am tired and defeated. for some reason it now projects 20 images, and they will not be still by the buttons already onscreen, but newly generated buttons cooperate with all of the code.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <button class="btn btn-info animal" data-name="Eagle" style="margin: 5px;">Eagle</button>
 </div>
 </div>
-<<div id="gifs" style="float:left"></div>
+<div id="gifs" style="float:left"></div>
 </div>
 
 <div style="float:right; margin-top:90px;">
